fix(search): allow exiting search dialog on mobile

--- a/sass/_partials/search.scss
+++ b/sass/_partials/search.scss
@@ -26,7 +26,7 @@
   }
 }
 
-.search-container {
+.search-dialog {
   &[open] {
     display: grid;
   }
